Add documentation services